Update root project

--- a/openldap-dsml-streaming/pom.xml
+++ b/openldap-dsml-streaming/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+    
+    <parent>
+        <groupId>io.github.kriolos.openldap</groupId>
+        <artifactId>openldap-parent</artifactId>
+        <version>4.6</version>
+    </parent>
 
     <groupId>io.github.kriolos.openldap</groupId>
     <artifactId>openldap-dsml-streaming</artifactId>
@@ -35,9 +41,6 @@
     </dependencies>
 
     <build>
-        <finalName>${project.artifactId}</finalName>
-        <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
