--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
     
     <properties>
         <java.version>8</java.version>
-        <app.artifactId>${project.artifactId}</app.artifactId>
     </properties>
     
     <modules>
@@ -26,9 +25,6 @@
     </modules>
 
     <build>
-        <finalName>${project.artifactId}</finalName>
-        <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -36,6 +32,9 @@
                 <version>3.14.0</version>
                 <configuration>
                     <showDeprecation>true</showDeprecation>
+                    <compilerArgs>
+                        <arg>-Xlint</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
